# control-panel

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt  state.tmp
.claude/: settings.json
.github/workflows/: deploy-vm.yml
.streamlit/: config.toml
apps_executaveis/: README.md  exemplo_hello.vbs  monitor_contribuintes.vbs  monitor_visivel.vbs  teste_1_hello.vbs  teste_2_abrir_notepad.vbs  teste_3_processamento.vbs
scripts/: desinstalar.bat  iniciar_painel.vbs  install.bat
src/: app_discovery.py  config_loader.py  config_writer.py  dashboard.py  executable_detector.py  main.py  orchestrator.py  process_manager.py  state.py  windows_job.py
src/config/: loader.py  writer.py
src/observability/: alerter.py  logger.py
src/orchestration/: orchestrator.py  state.py
src/process/: cleanup.py  git_updater.py  manager.py  python_runner.py  resource_monitor.py
src/ui/: dashboard.py
tests/: conftest.py  test_cleanup.py
