[project]
name = "hidra-control"
version = "1.0.0"
description = "Orquestrador central para todas as automações — scheduler, fila, monitor, dashboard"
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "streamlit>=1.35.0",
    "streamlit-autorefresh>=1.0.0",
    "python-dotenv>=1.0.0",
    "pywin32>=305; platform_system=='Windows'",
    # Notificações + audit trail centralizados (Telegram + JSONL no Drive).
    # Repo privado pessoal — pip precisa estar autenticado no GitHub na VM
    # (gh auth login ou PAT no .gitconfig).
    "telemonit @ git+https://github.com/marceloFilho-hub/telemonit.git@main",
]

[project.scripts]
hidra = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "src",
    "src.config",
    "src.orchestration",
    "src.process",
    "src.observability",
    "src.ui",
]
